--- a/springsecurity-oauth2-server/pom.xml
+++ b/springsecurity-oauth2-server/pom.xml
@@ -55,6 +55,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.73</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
